crates/solidity/testing/snapshots/bindings_output/events/emit_stmt/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected Equal or Semicolon.
   ╭─[ input.sol:7:23 ]
   │
 7 │         emit TestEvent(x);
   │                       ─┬─  
   │                        ╰─── Error occurred here.
───╯
Error: Expected Equal or Semicolon.
   ╭─[ input.sol:8:19 ]
   │
 8 │         emit Utils.Debug(x);
   │                   ────┬────  
   │                       ╰────── Error occurred here.
───╯
[39mReferences and definitions:[0m 
    ╭─[ input.sol:1:1 ]
    │
  1 │ contract Test {
    │          ──┬─  
    │            ╰─── name: 1
  2 │     event TestEvent(int id);
    │           ────┬────     ─┬  
    │               ╰───────────── name: 2
    │                          │  
    │                          ╰── name: 3
    │ 
  4 │     function test_emit() public {
    │              ────┬────  
    │                  ╰────── name: 4
  5 │         int x = 1;
    │             ┬  
    │             ╰── name: 5
    │ 
  7 │         emit TestEvent(x);
    │              ────┬────  
    │                  ╰────── name: 6
  8 │         emit Utils.Debug(x);
    │              ──┬──  
    │                ╰──── name: 7
    │ 
 12 │ library Utils {
    │         ──┬──  
    │           ╰──── name: 8
 13 │     event Debug(int subject);
    │           ──┬──     ───┬───  
    │             ╰──────────────── name: 9
    │                        │     
    │                        ╰───── name: 10
    │
    ├─[ input.sol:1:1 ]
    │
  7 │         emit TestEvent(x);
    │         ──┬─  
    │           ╰─── unresolved
  8 │         emit Utils.Debug(x);
    │         ──┬─  
    │           ╰─── unresolved
────╯
[39mDefiniens:[0m 
    ╭─[ input.sol:1:1 ]
    │
  1 │ ╭─▶ contract Test {
    ┆ ┆   
 10 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 1
    │
    ├─[ input.sol:1:1 ]
    │
  2 │ │       event TestEvent(int id);
    │ │   ──────────────┬────────┬─────  
    │ │                 ╰──────────────── definiens: 2
    │ │                          │       
    │ │                          ╰─────── definiens: 3
  3 │ ╭─▶ 
    ┆ ┆   
  9 │ ├─▶     }
    │ │           
    │ ╰─────────── definiens: 4
    │
    ├─[ input.sol:1:1 ]
    │
  5 │   │           int x = 1;
    │   │   ─────────┬─────────  
    │   │            ╰─────────── definiens: 5
  6 │   ╭─▶ 
  7 │   ├─▶         emit TestEvent(x);
    │   │                                
    │   ╰──────────────────────────────── definiens: 6
  8 │               emit Utils.Debug(x);
    │       ──────────────┬──────────────  
    │                     ╰──────────────── definiens: 7
    │ 
 11 │ ╭───▶ 
    ┆ ┆     
 14 │ ├───▶ }
    │ │         
    │ ╰───────── definiens: 8
    │
    ├─[ input.sol:1:1 ]
    │
 13 │     event Debug(int subject);
    │ ───────────────┬─────┬────────  
    │                ╰──────────────── definiens: 9
    │                      │          
    │                      ╰────────── definiens: 10
────╯
